# PlastBurstAlign

./: README.md  config.yaml  environment.yml  pyproject.toml
.github/workflows/: build-and-publish.yaml
benchmarking/: test_script.py
plastburstalign/: __init__.py  __main__.py  alignment_ops.py  alignment_tools.py  extraction_ops.py  plast_burst_align.py  seqfeature_ops.py  user_parameters.py
