[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "plastburstalign"
description = "A Python tool to extract and align genes, introns, and intergenic spacers across hundreds of plastid genomes using associative arrays"
authors = [
    {name = "Thanina Hamitouche", email = "t_hamitouche@mail.fhsu.edu"},
    {name = "Michael Gruenstaeudl, PhD", email = "m_gruenstaeudl@fhsu.edu"}
]
version = "0.9.8"

requires-python = ">=3.11"
dependencies = [
    "biopython>=1.85",
    "coloredlogs>=15.0",
    "psutil>=5.9",
    "requests>=2.32",
    "pyyaml>=6.0.2",
]

readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",

    "License :: OSI Approved :: BSD License",

    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = [
    "bioinformatics",
    "alignment",
    "flatfile",
    "plastid genome",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["plastburstalign"]

[project.scripts]
plastburstalign = "plastburstalign.__main__:main"

[project.urls]
Homepage = "https://gruenstaeudl-lab.com/"
Repository = "https://github.com/michaelgruenstaeudl/PlastomeBurstAndAlign"
